tests/declare_fun/err.js
//@flow

function f(x: number): number { return 42}
declare function f(number): string // error
